fix color of episode titles, spacing of episode 1 card, weight of body font

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -654,8 +654,10 @@ div#episodesList{
     line-height: 1.3;
     letter-spacing: 1px;
     margin-top:-10px;
+    color:white;
+    font-weight:normal;
 }
-
+/*
 .episode-title a {
     color: #fff;
     text-decoration: none;
@@ -665,7 +667,7 @@ div#episodesList{
     background-size: 0% 100%;
     transition: background-size 0.3s;
 }
-
+*/
 .episode-title a:hover {
     background-size: 100% 100%;
     color:blueviolet;
